--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.11.1",
+    "react-script": "^2.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
